# unam-computer-science

./: README.md
basic-programming/: CMakeLists.txt  README.md  main.c
basic-programming/src/: AsyncProgram.cpp  OperatingSystem.c  Serial.c  SerialTest.cpp  TimeTest.cpp
docs/: README.md
docs/algoritmos/: ordenamientos.md
docs/analisis/: complejidad.md
docs/estructuras-datos/: arboles-bst.md  colas.md  pilas.md
dsa-dotnet/practica-0-intro-cs/: README.md
dsa-dotnet/practica-1-complejidad/: LICENSE  README.md  ReportePractica.html  ReportePractica.md  ed-complejidad-cs-demo.sln
dsa-dotnet/practica-10-ordenamientos/: README.md  Respuestas.md  pr-ctica-10-ordenamientos-Fernu292.sln
dsa-dotnet/practica-11-grafica-con-listas-de-adyacencias/: README.md
dsa-dotnet/practica-2-retroceso/: README.md
dsa-dotnet/practica-3-polinomio-de-direccionamiento/: README.md  ed-polinomio-de-direccionamiento-cs-demo.sln
dsa-dotnet/practica-4-pila-con-referencias/: README.md  ed-pila-ligada-cs.sln
dsa-dotnet/practica-5-cola-en-arreglo/: README.md  Respuestas.txt  ed-cola-en-arreglo-cs.sln
fisica-computacional/: README.md
software-modeling/ejercicio_1.1/: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
software-modeling/ejercicio_1.1/src/: Solution.cpp  Solution.h
software-modeling/ejercicio_1.1/test/: UnitTestingSolution.cpp
software-modeling/ejercicio_2/: CMakeLists.txt  main.cpp
software-modeling/ejercicio_2/include/: LinkedList.h  Solution.h
software-modeling/ejercicio_2/src/: LinkedList.cpp  Solution.cpp
software-modeling/ejercicio_2/test/: UnitTestingSolution.cpp
(+186 files in other folders)
